Editando estilo do codigo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </button>
     </div>
             </form>
-        <form id="edit-form">
+        <form id="edit-form" class="hide">
                      <p>Edite sua tarefa</p>
                 <div class="form-control">
                      <input type="text" id="edit-input">
