--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
             </div>
                 <button id="cancel-edit-btn">Cancelar</button>
         </form> 
-        <form>
-        <div id="tolbaar">
+          <div id="toolbar">
             <div id="search">
                 <h4>Pesquisar:</h4>
+                <form> 
                 <input type="text" id="search-input" placeholder="buscar">
                 <button id="erase-button">
                     <i class="fa-solid fa-delete-left"></i>
                 </button>
+            </form>
             </div>
             <div id="filter">
                 <h4>Filtrar</h4>
@@ -58,8 +59,9 @@
                     <option value="todo">A fazer</option>
                 </select>
             </div>
+        </div>
             <div id="todo-list">
-                <div class="todo">
+                <div class="todo done">
                     <h3>Estou fazendo alguma coisa</h3>
                     <button class="finish-todo">
                         <i class="fa-solid fa-check"></i>
