Imagem e codigo atualizado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="todo-container">
         <header> 
-            <h1>Todo Avancado</h1>
+            <h1>To do List</h1>
         </header>    
             <form id="todo-form">
                 <p>Adicionar Tarefa:</p>
